Updates for 3.0.x autorepo support